--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently 'next dev' 'quirrel'",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.0.2",
+    "concurrently": "^7.5.0",
     "next": "13.0.2",
+    "quirrel": "^1.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
